three new html files created

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Javascript Quiz</title>
+    <title>Quiz to check your knowledge</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <div>
+        <h1>It's time to check your HTML, CSS and Javascript knowledge?</h1>
+        <p>Choose your option below</p>
+        <button  id="html-btn" class="button" onclick="navigateToPage('htmlquiz.html')">HTML</button>
+        <button id="css-btn" class="button" onclick="navigateToPage('cssquiz.html')">CSS</button>
+        <button id="javascript-btn" class="button" onclick="navigateToPage('jsquiz.html')">JavaScript</button>
+    </div>
+  <script src="assets/js/script.js"></script>  
 </body>
 </html>
