--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div>
         <h1>It's time to check your HTML, CSS and Javascript knowledge?</h1>
         <p>Choose your option below</p>
-        <button  id="html-btn" class="button" onclick="navigateToPage('htmlquiz.html')">HTML</button>
-        <button id="css-btn" class="button" onclick="navigateToPage('cssquiz.html')">CSS</button>
-        <button id="javascript-btn" class="button" onclick="navigateToPage('jsquiz.html')">JavaScript</button>
+        <button  id="html-btn" class="button" onclick="window.location.href='htmlquiz.html';">HTML</button>
+        <button id="css-btn" class="button" onclick="window.location.href='cssquiz.html';">CSS</button>
+        <button id="javascript-btn" class="button" onclick="window.location.href='jsquiz.html';">JavaScript</button>
     </div>
   <script src="assets/js/script.js"></script>  
 </body>
