landing page styling and background set

--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Title of the website-->
     <title>Quiz to check your knowledge</title>
+     <!--Stylesheets-->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!--Favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
     
 </head>
 <body>
-    <div>
+    <div class="cointainer">
         <h1>It's time to check your HTML, CSS and Javascript knowledge?</h1>
         <p>Choose your option below</p>
         <button  id="html-btn" class="button" onclick="window.location.href='htmlquiz.html';">HTML</button>
