--- a/index.html
+++ b/index.html
@@ -40,15 +40,16 @@
         <button id="html-btn" class="button" onclick="htmlQuizQuestions()">HTML</button>
         <button id="css-btn" class="button" onclick="cssQuizQuestions()">CSS</button>
         <button id="javascript-btn" class="button" onclick="javascriptQuizQuestions()">JavaScript</button>
-        
-        
-               <!--  <label for="option">Choose your option:</label>
-            <select id="option">
-                <option class="select" value="html">HTML</option>
-                <option class="select" value="css">CSS</option>
-                <option class="select" value="javascript">JavaScript</option>
-            </select>  -->
-
+    </div>
+    <div id="quiz" class="hide">
+        <h3 id="question">Display Question here:</h3>
+        <div id="answers">
+            <button class="ans-button">Answer 1</button>
+            <button class="ans-button">Answer 2</button>
+            <button class="ans-button">Answer 3</button>
+            <button class="ans-button">Answer 4</button>
+        </div>
+        <button class="nxt-button hide">Next</button>
     </div>
     <script src="assets/js/script.js"></script>
 </body>
