shuffling question included button box shadow included

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <button class="ans-button">Answer 3</button>
             <button class="ans-button">Answer 4</button>
         </div>
-        <button class="nxt-button hide">Next</button>
+        <button id="nxt-button" class="hide">Next</button>
     </div>
     <script src="assets/js/script.js"></script>
 </body>
