404 file added, method to check true or false of answer done

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <!--Main division of the quiz container-->
+    <main>
     <div id="container">
         <h1>Quiz time</h1>
         <p>Are you ready for the challenge?</p>
@@ -50,6 +51,7 @@
         </div>
         <button id="nxt-button" class="hide">Next</button>
     </div>
+    </main>
     <!--link to javascript file-->
     <script src="assets/js/script.js"></script>
 </body>
