play again function created

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Quiz time</h1>
         <p>Are you ready for the challenge?</p>
         <!--button to go to instructions-->
-        <button id="start-btn" class="button" onclick="goToInstructions()">Start</button>
+        <button id="start-btn" class="button">Start</button>
     </div>
     <!--displays the division container-->
     <div id="instructions" class="hide">
@@ -29,16 +29,16 @@
         <p>There are 10 questions in each topic</p>
         <p>Every correct answer will be rewarded with 1 point</p>
         <!--two buttons to choose between start the game or exit-->
-        <button id="ready-btn" class="button" onclick="jumpToOptions()">Ready</button>
-        <button id="exit-btn" class="button" onclick="goToInstructions()">Exit</button>
+        <button id="ready-btn" class="button">Ready</button>
+        <button id="exit-btn" class="button">Exit</button>
     </div>
     <!--a division to display the options to choose between 3 quiz type-->
     <div id="options" class="hide">
         <h2>Lets go for it..</h2>
         <p>Choose your option below</p>
-        <button id="html-btn" class="button" onclick="htmlQuizQuestions()">HTML</button>
-        <button id="css-btn" class="button" onclick="cssQuizQuestions()">CSS</button>
-        <button id="javascript-btn" class="button" onclick="javascriptQuizQuestions()">JavaScript</button>
+        <button id="html-btn" class="button">HTML</button>
+        <button id="css-btn" class="button">CSS</button>
+        <button id="javascript-btn" class="button">JavaScript</button>
     </div>
     <!--division to display the question and answers-->
     <div id="quiz" class="hide">
