final version for htmlquiz

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         </div>
         <button id="nxt-button" class="hide">Next</button>
     </div>
+    <div id ="result" class="hide">
+        <h3 id="finalscore">Display score here</h3>
+        <button id="replay-button" >Play Again</button>
+    </div>
     </main>
     <!--link to javascript file-->
     <script src="assets/js/script.js"></script>
