--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
         <div id="instructions" class="hide">
             <h2>Instructions before you start</h2>
             <p>You can choose your topic between HTML, CSS and JavaScript</p>
-            <p>There are 10 questions in each topic</p>
+            <p>There are 5 questions in each topic</p>
+            <p>Click on the answer button once you are sure, because once you have chosen, you do not get an option to change your answer</p>
             <p>Every correct answer will be rewarded with 1 point</p>
+            <p>Good Luck!</p>
             <!--two buttons to choose between start the game or exit-->
             <button id="ready-btn" class="button">Ready</button>
             <button id="exit-btn" class="button">Exit</button>
