--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 </head>
 
 <body>
-    <!--Main division of the quiz container-->
+    <!--Main section of the quiz container-->
     <main>
-        <div id="container">
+        <section id="container">
             <h1>Quiz time</h1>
             <p>Are you ready for the challenge?</p>
             <!--button to go to instructions-->
             <button id="start-btn" class="button">Start</button>
-        </div>
-        <!--displays the division container-->
-        <div id="instructions" class="hide">
+        </section>
+        <!--displays the section container-->
+        <section id="instructions" class="hide">
             <h2>Instructions before you start</h2>
             <p>You can choose your topic between HTML, CSS and JavaScript.</p>
             <p>There are 10 questions in each topic.</p>
@@ -39,32 +39,32 @@
             <!--two buttons to choose between start the game or exit-->
             <button id="ready-btn" class="button">Ready</button>
             <button id="exit-btn" class="button">Exit</button>
-        </div>
-        <!--a division to display the options to choose between 3 quiz type-->
-        <div id="options" class="hide">
+        </section>
+        <!--a section to display the options to choose between 3 quiz type-->
+        <section id="options" class="hide">
             <h2>Lets go for it..</h2>
             <p>Choose your option below</p>
             <button id="html-btn" class="button">HTML</button>
             <button id="css-btn" class="button">CSS</button>
             <button id="javascript-btn" class="button">JavaScript</button>
-        </div>
-        <!--division to display the question and answers-->
-        <div id="quiz" class="hide">
+        </section>
+        <!--section to display the question and answers-->
+        <section id="quiz" class="hide">
             <h3 id="question">Display Question here:</h3>
-            <div id="answers">
+            <section id="answers">
                 <button class="ans-button">Answer 1</button>
                 <button class="ans-button">Answer 2</button>
                 <button class="ans-button">Answer 3</button>
                 <button class="ans-button">Answer 4</button>
-            </div>
+            </section>
             <!--a next button to go to next question-->
             <button id="nxt-button" class="hide">Next</button>
-        </div>
-        <!--division to display the score and play again button-->
-        <div id="result" class="hide">
+        </section>
+        <!--section to display the score and play again button-->
+        <section id="result" class="hide">
             <h3 id="finalscore">Display score here</h3>
             <button id="replay-button">Play Again</button>
-        </div>
+        </section>
     </main>
     <!--link to javascript file-->
     <script src="assets/js/script.js"></script>
