new js file added and the question arrays moved to quizData.js file

--- a/404.html
+++ b/404.html
@@ -22,7 +22,8 @@
         <p class="return-to-home"><a href="index.html">Return back to the website</a></p>
     </main>
     <!--link to javascript file-->
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/script.js" type="module"></script>
+    <script src="assets/js/quizData.js" type="module"></script>
 </body>
 
 </html>
