--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 </head>
 
 <body>
-    <!--Main div of the quiz container-->
+   <!--Main div of the quiz container-->
     <main id="bkimage">
         <section id="box">
             <div id="container">
-                <h1>Quiz time</h1>
+                <h1>Welcome to HTML, CSS & JavaScript Quiz</h1>
                 <p>Are you ready for the challenge?</p>
                 <!--button to go to instructions-->
                 <button id="start-btn" class="button">Start</button>
