javascript file name changd from camelcase to smallcases

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </main>
     <!--link to javascript file-->
     <script src="assets/js/script.js" type="module"></script>
-    <script src="assets/js/quizData.js" type="module"></script>
+    <script src="assets/js/quizdata.js" type="module"></script>
 </body>
 
 </html>
