modification in index.html paragraph, readme updation

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
 </head>
 
 <body>
-   <!--Main div of the quiz container-->
+    <!--Main div of the quiz container-->
     <main id="bkimage">
         <section id="box">
             <div id="container">
-                <h1>Welcome to HTML, CSS & JavaScript Quiz</h1>
+                <h1>Welcome to HTML, CSS & JavaScript Quiz!</h1>
+                <p>Here is an opportunity to check your knowledge on three different topics in one platform.</p>
                 <p>Are you ready for the challenge?</p>
                 <!--button to go to instructions-->
                 <button id="start-btn" class="button">Start</button>
@@ -71,6 +72,7 @@
     <!--link to javascript file-->
     <script src="assets/js/script.js" type="module"></script>
     <script src="assets/js/quizdata.js" type="module"></script>
+
 </body>
 
 </html>
